--- a/src/assets/css/Calendar.css
+++ b/src/assets/css/Calendar.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 5px;
     right: 5px;
-    z-index: 5;
+    z-index: 2;
     background: rgba(37,37,37,255);
     width: 280px;
     height: auto;
@@ -15,7 +15,7 @@
 }
 
 
-/* Keep the same as .CalenderPopupCOntainer .ShortcutItemContainerIsSelected */
+/* Keep the same as .CalenderPopupContainer .ShortcutItemContainerIsSelected */
 .CalendarPopupContainer .ShortcutItemContainer, #DateLabelContainer { 
     display: table;
     width: 100%;
