--- a/src/assets/css/ListToolbar.css
+++ b/src/assets/css/ListToolbar.css
@@ -1,20 +1,20 @@
 #ListToolbarSettingsIcon {
-    width: 15px;
-    height: 15px;
+    width: 22px;
+    height: 22px;
 }
 
 .SortingMenu {
+    position: relative;
     color: #FFF;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-weight: 500;
     font-size: 8pt;
     flex-grow: 0.5;
-    height: 30px;
-    line-height: 35px;
+    height: 36px;
+    line-height: 52px;
     text-align: left;
     padding-left: 5px;
     -webkit-user-select: none;
-    overflow: hidden;
     white-space: nowrap;
     user-select: none;
     
@@ -49,8 +49,9 @@
     color: #FFF;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     flex-grow: 0.5;
-    height: 30px;
-    line-height: 30px;
+    font-size: 14pt;
+    height: 48px;
+    line-height: 48px;
     text-align: right;
     padding-right: 5px;
     -webkit-user-select: none;
@@ -63,7 +64,7 @@
 
 
 .ListToolbar {
-    height: 30px;
+    height: 42px;
     background: rgba(51,51,51,255);
     width: 100%;
     margin: 0px;
