--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -3,7 +3,7 @@
     background: rgba(30,30,30,255);
     width: 100%;
     height: 100%;
-    padding: 5px;
+    padding: 5px 0px;
 }
 
 .ProjectToolBar {
