Various Bug Fixes

--- a/src/assets/css/ListToolbar.css
+++ b/src/assets/css/ListToolbar.css
@@ -3,7 +3,7 @@
     height: 22px;
 }
 
-.SortingMenu {
+.SettingsMenu {
     position: relative;
     color: #FFF;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
