--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,6 +1,7 @@
 html, body {
   min-height: 100%;
   height: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #root {
@@ -38,5 +39,5 @@ html, body {
   left: 10vw;
   width: 90vw;
   height: 100vh;
-  overflow-y: scroll;
+  overflow: hidden;
 }
