--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -3,19 +3,20 @@
     background: rgba(30,30,30,255);
     width: 100%;
     height: 100%;
-    padding: 5px 0px;
 }
 
 .ProjectToolBar {
-    position: fixed;
     background: rgba(37,37,37,255);
     width: 100%;
+    height: 7%;
     -webkit-user-select: none;
     user-select: none;
 }
 
 .TaskListsContainer {
-    margin-top: 60px;
+    overflow: scroll;
+    max-height: 93%;
+    padding: 0px 5px;
 }
 
 .TaskListWidgetContainer {
@@ -25,10 +26,9 @@
 }
 
 .ProjectName {
-    color: #FFF;
+    color: #DDD;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 15pt;
-    margin: 0px;
 }
 
 .ProjectNameContainer {
