--- a/src/assets/css/ProjectSelector.css
+++ b/src/assets/css/ProjectSelector.css
@@ -6,11 +6,11 @@
     font-size: 16pt;
     -webkit-user-select: none;
     user-select: none;
-    line-height: 40px;
+    line-height: 50px;
 }
 
 .ProjectSelectorContainer {
-  height: 40px;
+  height: 50px;
 }
 
 .ProjectSelectorFlexContainer {
@@ -76,4 +76,5 @@
 
 .ProjectSelectorActiveStyle {
   background: rgba(63,63,76,255);
+  height: 100%;
 }
