--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -6,7 +6,7 @@
     color: #FFF;
     margin: 5px;
     cursor: pointer;
-    opacity: 0.85
+    opacity: 0.65;
 }
 
 .ProjectToolbarFlexContainer {
@@ -23,5 +23,5 @@
 }
 
 .ToolbarButtonsFlexItemsRight {
-    flex: 0.75;
+    flex: 0.5;
 }
