--- a/src/assets/css/Calendar.css
+++ b/src/assets/css/Calendar.css
@@ -82,6 +82,7 @@
     float: right;
     margin: 10px 10px;
     background: transparent;
+    padding: 2px;
     color: #FFF;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     border: 1px solid #FFF;
