--- a/src/assets/css/Calendar.css
+++ b/src/assets/css/Calendar.css
@@ -15,6 +15,31 @@
     user-select: none;
 }
 
+.PriorityToggle {
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    color: #FFF;
+    font-weight: 500;
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+.PriorityToggle[data-ishighpriority*=true] {
+    color: #F00;
+    font-weight: 600;
+}
+
+.PriorityToggleContainer {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.PriorityToggleContainer:hover {
+    background: rgba(52,52,52,255);
+}
+
 
 /* Keep the same as .CalenderPopupContainer .ShortcutItemContainerIsSelected */
 .CalendarPopupContainer .ShortcutItemContainer, #DateLabelContainer { 
