--- a/src/assets/css/TaskText.css
+++ b/src/assets/css/TaskText.css
@@ -14,6 +14,12 @@
   margin-left: 8px;
 }
 
+.TaskText[data-ishighpriority*="true"] {
+  color: #D11;
+  font-weight: 700;
+  font-stretch: 1;
+}
+
 .Fade {
   opacity: 0.15;
   font-weight: 200;
