--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -2,6 +2,7 @@ html, body {
   min-height: 100%;
   height: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow: scroll;
 }
 
 #root {
@@ -27,10 +28,10 @@ html, body {
 }
 
 .SidebarContainer {
+  position: fixed;
   float: left;
-  z-index: 2;
-  width: 50px;
-  height: 100%;
+  z-index: 3;
+  height: 100vh;
 }
 
 .ProjectContainer {
@@ -38,6 +39,4 @@ html, body {
   position: absolute;
   left: 10vw;
   width: 90vw;
-  height: 100vh;
-  overflow: hidden;
 }
