--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -7,16 +7,17 @@
 
 .ProjectToolBar {
     background: rgba(37,37,37,255);
-    width: 100%;
-    height: 7%;
+    width: 90%;
+    height: 45px;
     -webkit-user-select: none;
     user-select: none;
+    position: fixed;
+    z-index: 2;
 }
 
 .TaskListsContainer {
-    overflow: scroll;
-    max-height: 93%;
-    padding: 0px 5px;
+    padding-top: 45px; /* This should always be the opposite of the offset given to ScrollToComponent(). Otherwise it will scroll the
+    list toolbar out of view. */
 }
 
 .TaskListWidgetContainer {
