--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -9,6 +9,17 @@
     opacity: 0.65;
 }
 
+.AccountScreenButton {
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-size: 36px;
+    width: 36px;
+    height: 36px;
+    color: #FFF;
+    margin: 5px;
+    cursor: pointer;
+    float: right;
+}
+
 .ProjectToolbarFlexContainer {
     display: flex;
     flex-direction: row;
