Further Layout improvements.

--- a/src/assets/css/Task.css
+++ b/src/assets/css/Task.css
@@ -6,6 +6,7 @@
   max-height: 120px; /* Same as .TaskClickContainer max-height */
   display: flex;
   flex-direction: column;
+  margin-bottom: 4px;
 }
 
 .TaskInactiveStyle {
