--- a/src/assets/css/TaskText.css
+++ b/src/assets/css/TaskText.css
@@ -9,7 +9,7 @@
 
 .TaskText {
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-  color: #FFF;
+  color: #EEE;
   font-Size: 12pt;
   margin-left: 8px;
 }
