--- a/src/assets/css/ProjectSelector.css
+++ b/src/assets/css/ProjectSelector.css
@@ -33,13 +33,21 @@
 .ProjectSelectorIcon {
   float: right;
   margin: 0px 2px;
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
 }
 
 .ProjectSelectorIcon[data-colour*="Red"] {
   background: #F00;
+}
+
+.ProjectSelectorIcon[data-colour*="YellowRed"] {
+  background: #FF9300;
+  border: 2px red solid;
+  width: 22px; /* Width and Height to account for Increased Border */
+  height: 22px;
+  padding: -2px auto; /* Corrects Text postion once Border is added */
 }
 
 .ProjectSelectorIcon[data-colour*="Yellow"] {
@@ -57,11 +65,10 @@
 .ProjectSelectorIconText {
   display: block;
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-  font-size: 8pt;
+  font-size: 12pt;
   color: #FFF;
   text-align: center;
-  margin: 0 auto;
-  line-height: 16px;
+  margin: 0px auto;
 }
 
 #projectSelectorInput {
