--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -3,10 +3,11 @@
     top: 5px;
     left: 5px;
     width: 150px;
-    height: 193px;
+    height: fit-content;
     border: 1px solid white;
     z-index: 2;
     background: rgba(37,37,37,255);
+    box-shadow: 5px 5px 10px 0px #111;
 }
 
 .TaskListSettingsMenuContainer {
@@ -38,7 +39,7 @@
     vertical-align: middle;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-weight: 400;
-    font-size: 12pt;
+    font-size: 16pt;
     color: #FFF;
     padding: 5px 10px;
     text-align: left;
