--- a/src/assets/css/Task.css
+++ b/src/assets/css/Task.css
@@ -3,10 +3,10 @@
   height: auto;
   overflow: visible;
   min-height: 40px;
-  max-height: 120px; /* Same as .TaskClickContainer max-height */
+  max-height: 240px; /* Same as .TaskClickContainer max-height */
   display: flex;
   flex-direction: column;
-  margin-bottom: 4px;
+  margin-bottom: 0px;
 }
 
 .TaskInactiveStyle {
@@ -19,6 +19,7 @@
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
+  border-bottom: 1px rgb(40,40,40) solid;
 }
 
 
@@ -59,7 +60,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 40px;
-  max-height: 120px;  /* Same as .TaskContainer max-height */
+  max-height: 240px;  /* Same as .TaskContainer max-height */
   overflow: hidden;
   
 }
