--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -1,13 +1,41 @@
 .TaskListSettingsMenuPopup {
     position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 150px;
+    top: 10px;
+    left: 10px;
+    width: 200px;
     height: fit-content;
-    border: 1px solid white;
     z-index: 2;
     background: rgba(37,37,37,255);
+    border: 1px solid white;
+    
     box-shadow: 5px 5px 10px 0px #111;
+}
+
+.ShowCompletedTasksSelection {
+    display: table;
+    width: fit-content;
+    padding-left: 0px;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    border-bottom: 1px rgb(80, 80, 80) solid;
+}
+
+.ShowCompletedTasksCheckBox {
+    display: table-cell;
+    vertical-align: middle;
+    margin-left: 8px;
+    height: 16px;
+    width: 16px;
+}
+
+.ShowCompletedTasksLabel {
+    width: 100%;
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 10pt;
+    padding-left: 10px;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .TaskListSettingsMenuContainer {
@@ -20,27 +48,49 @@
 }
 
 .TaskListSettingsMenuItemContainer {
-    display: table;
     flex-grow: 1;
-    height: 30px;
-    width: 100%;
+    width: 175px;
+    padding-left: 5px;
 }
 
-.TaskListSettingsMenuItemContainerIsSelected {
-    display: table;
-    flex-grow: 1;
-    height: 30px;
-    width: 100%;
-    background: rgba(63,63,76,255);
+.TaskListSettingsMenuItemFlexContainer {
+    display: flex;
+    height: 40px;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
 }
+
+
 
 .TaskListSettingsMenuItemLabel {
-    display: table-cell;
-    vertical-align: middle;
+    flex-grow: 1;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-size: 10pt;
     font-weight: 400;
-    font-size: 16pt;
     color: #FFF;
-    padding: 5px 10px;
+    padding: 0px;
     text-align: left;
+    line-height: 30px;
+}
+
+.TaskListSettingsMenuSelectedItemChit {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background: #BBB;
+    margin-right: 15px;
+    margin-left: 5px;
+}
+
+.TaskListSettingsMenuSelectedItemChit[data-isselected*="false"] {
+    visibility: hidden;
+}
+
+.TaskListSettingsMenuItemBottomBorder {
+    height: 0px;
+    margin-bottom: -1px;
+    width: 135px;
+    margin-left: 20px;
+    border-bottom: 0px rgb(65,65,65) solid;
 }
