--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -1,12 +1,12 @@
 
 .Project {
-    background: rgba(0,0,00,255);
+    background: var(--background-color);
     width: 100%;
     height: 100%;
 }
 
 .ProjectToolBar {
-    background: rgba(20,20,20,255);
+    background: var(--primary-color);
     width: 100%;
     height: 45px;
     -webkit-user-select: none;
