--- a/src/assets/css/ToolBarButton.css
+++ b/src/assets/css/ToolBarButton.css
@@ -1,12 +1,20 @@
 .ToolBarButton {
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-    font-size: 36px;
-    width: 36px;
-    height: 36px;
+    width: 100%;
+    height: 100%;
     color: #FFF;
-    margin: 5px;
     cursor: pointer;
-    opacity: 0.65;
+    opacity: 0.75;
+}
+
+.ToolBarButtonContainer {
+    flex-grow: 0;
+    height: 27px;
+    width: 48px;
+    margin: 4px;
+    padding: 4px;
+    background-image: var(--primary-button-background-image);
+    cursor: pointer;
+    border-radius: 2px;
 }
 
 .AccountScreenButton {
@@ -26,19 +34,13 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 90%;
 }
 
-.ToolbarButtonsFlexItemsLeft {
-    flex-grow: 1;
-}
-
-.ToolbarButtonsFlexItemsCenter {
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
-.ToolbarButtonsFlexItemsRight {
-    flex-grow: 0.15;
-    margin-right: 15px;
+.ToolbarPairsFlexContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
 }
