--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -5,7 +5,7 @@
     width: 200px;
     height: fit-content;
     z-index: 2;
-    background: rgba(37,37,37,255);
+    background: var(--surface-color);
     border: 1px solid white;
     
     box-shadow: 5px 5px 10px 0px #111;
