--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -21,6 +21,10 @@
     margin-left: 10px;
 }
 
+.TaskListsContainerHidden {
+    visibility: hidden;
+}
+
 .TaskListWidgetContainer {
     height: fit-content;
     width: 100%;
