Initial Diffing of Features from pounder-desktop

--- a/src/assets/css/ListToolbar.css
+++ b/src/assets/css/ListToolbar.css
@@ -73,3 +73,6 @@
     justify-content: space-between;
     align-items: center;
 }
+.ListToolbar[data-isfocused*="true"] {
+    background: rgb(42,42,42);
+}
