--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -21,6 +21,8 @@
 
 .ProjectSelectorsFlexItemContainerOpen {
     flex-grow: 1;
+    height: 100vh;
+    background: var(--surface-color);
 }
 
 .ProjectSelectorsFlexItemContainerCollapsed {
@@ -52,5 +54,27 @@
 .SidebarCollapseButton {
     background: rgba(50,50,50,255);
     height: 100vh;
+}
+
+.SidebarBottombarContainer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 50px;
+    background: var(--primary-color);
+}
+
+.SidebarBottombarContainer[data-iscollapsed*="true"] {
+    display: none;
+}
+
+.SidebarBottombarFlexContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    height: 100%;
 }
 
