--- a/src/assets/css/ProjectSelector.css
+++ b/src/assets/css/ProjectSelector.css
@@ -17,7 +17,7 @@
   height: fit-content;
   min-height: 50px;
   display: flex;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 .ProjectSelectorFlexContainer {
@@ -35,7 +35,6 @@
 
 .ProjectSelectorHeartContainer {
   flex-grow: 0;
-  padding-left: 5px;
   width: 12px;
   height: 16px;
 }
@@ -88,12 +87,13 @@
   margin: 0px auto;
 }
 
-#projectSelectorInput {
+.ProjectSelectorInput {
   color: #FFF;
   margin: auto 5px;
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
   font-size: 16pt;
   background: rgba(100,100,100,255);
   border: 0px solid #FFF;
+  width: 85%;
 }
 
