--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -8,17 +8,34 @@
 .ProjectToolBar {
     background: var(--primary-color);
     width: 100%;
-    height: 45px;
+    height: fit-content;
     -webkit-user-select: none;
     user-select: none;
     position: fixed;
     z-index: 2;
 }
 
+.ProjectHeaderContainer {
+    width: 100%;
+    height: 32px;
+}
+
+.ProjectHeaderBackArrowContainer {
+    width: 32px;
+    height: 32px;
+}
+
+.ProjectHeaderBackArrow {
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+}
+
 .TaskListsContainer {
-    padding-top: 45px; /* This should always be the opposite of the offset given to ScrollToComponent(). Otherwise it will scroll the
+    padding-top: 77px; /* This should always be the opposite of the offset given to ScrollToComponent(). Otherwise it will scroll the
     list toolbar out of view. */
-    margin-left: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .TaskListWidgetContainer {
