--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     -webkit-user-select: none;
     user-select: none;
+    background: var(--primary-color);
 }
 
 .SidebarToolbarFlexContainer {
@@ -40,23 +41,13 @@
     align-items: flex-start;
 }
 
-.ProjectSelectorsFlexItemContainerOpen {
+.ProjectSelectorsFlexItemContainer {
     flex-grow: 1;
     height: 100vh;
     background: var(--surface-color);
 }
 
-.ProjectSelectorsFlexItemContainerCollapsed {
-    display: none;
-    
-}
-
-.CollapseButtonFlexItemContainer {
-    flex-grow: 0;
-    width: 25px;
-}
-
-.SidebarOpen {
+.Sidebar {
     z-index: 3;
     position: relative; /* So .SidebarCollapseButtonContainer absolute position Works */
     background: var(--primary-color);
@@ -67,16 +58,6 @@
     user-select: none;
 }
 
-.SidebarCollapsed {
-    width: 25px;
-    height: 100vmax;
-}
-
-.SidebarCollapseButton {
-    background: rgba(50,50,50,255);
-    height: 100vh;
-}
-
 .SidebarBottombarContainer {
     position: absolute;
     bottom: 0px;
@@ -84,10 +65,6 @@
     width: 100%;
     height: 50px;
     background: var(--primary-color);
-}
-
-.SidebarBottombarContainer[data-iscollapsed*="true"] {
-    display: none;
 }
 
 .SidebarBottombarFlexContainer {
