--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -17,12 +17,37 @@
 
 .ProjectHeaderContainer {
     width: 100%;
-    height: 32px;
+    height: fit-content;
+    margin-bottom: 5px;
 }
 
+.ProjectNameContainer {
+    width: 100%;
+    height: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+
+.ProjectName {
+    flex-grow: 2;
+    width: 100%;
+    text-align: center;
+    vertical-align: middle;
+    color: #BBB;
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-size: 15pt;
+}   
+
+
 .ProjectHeaderBackArrowContainer {
+    position: absolute; /* Allows it to clip the first portion of the Header Container */
     width: 32px;
     height: 32px;
+    margin-left: 14px;
 }
 
 .ProjectHeaderBackArrow {
@@ -44,18 +69,7 @@
     margin: 10px 0px;
 }
 
-.ProjectName {
-    color: #DDD;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-    font-size: 15pt;
-}
 
-.ProjectNameContainer {
-    width: 100%;
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
 
 
 
