--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -39,6 +39,13 @@ html, body {
   width: 100vw;
 }
 
+.ProjectContainer-enter-done {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+}
+
 /* Sidebar Container Transitioning. 
 enter, enter-active, enter-done, 
 exit, exit-active, exit-done.  */
