--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -1,7 +1,8 @@
 /* Window Layout */
 .AppSettingsMenuContainer {
     background: var(--primary-color);
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 }
 
 .AppSettingsMenuSidebarContentFlexContainer {
@@ -21,9 +22,7 @@
     flex: 1;
     width: 100%;
     background: var(--surface-color);
-    padding: 10px;
-    height: 100vh;
-    margin-bottom: 48px;
+    height: 100%;
     overflow-y: scroll;
 }
 
@@ -31,8 +30,6 @@
     background: var(--primary-color);
     width: 100%;
     height: 32px;
-    padding-left: 10px;
-    padding-top: 10px;
 }
 
 .AppSettingsBackArrowContainer {
@@ -185,11 +182,11 @@
     overflow-y: scroll;
     top: 0px;
     left: 0px;
-    background: rgba(0, 0, 0, 0.5);
+    background: purple;
     margin: 0px;
     padding: 0px;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 6;
 }
 
