--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -17,6 +17,9 @@ html, body {
   --surface-color-alternate: rgb(27, 27, 27);
   --primary-button-background-image: linear-gradient(to bottom,rgba(68,68,68,0.50),rgba(60,60,60,0.50));
 
+  /* Layout */
+  --back-arrow-margin-left: 14px;
+
 }
 
 .App {
