--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -35,6 +35,7 @@
 .AppSettingsBackArrowContainer {
     width: 48px;
     height: 48px;
+    margin-left: var(--back-arrow-margin-left);
 }
 
 .AppSettingsBackArrow {
@@ -175,14 +176,13 @@
 }
 
 /* Centering */
-
-.AppSettingsContainer {
+.AppSettingsContainer-enter {
     display: block;
-    position: fixed;
+    position: absolute;
+    transform: translatex(-100%);
     overflow-y: scroll;
     top: 0px;
     left: 0px;
-    background: purple;
     margin: 0px;
     padding: 0px;
     width: 100vw;
@@ -190,14 +190,72 @@
     z-index: 6;
 }
 
-.CenteringTest {
-    background: purple;
-    width: 100%;
-    height: 100%;
+.AppSettingsContainer-enter-active {
+    display: block;
+    position: absolute;
+    overflow-y: scroll;
+    transform: translateX(0%);
+    transition: transform 250ms ease;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 6;
 }
 
-.CenteringTestContent {
-    background: blue;
-    width: 100%;
-    height: 100%;
+.AppSettingsContainer-enter-done {
+    display: block;
+    position: absolute;
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 6;
+}
+
+.AppSettingsContainer-exit {
+    display: block;
+    position: absolute;
+    transform: translatex(0%);
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 6;
+}
+
+.AppSettingsContainer-exit-active {
+    display: block;
+    position: absolute;
+    overflow-y: scroll;
+    transform: translateX(-100%);
+    transition: transform 250ms ease;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 6;
+}
+
+.AppSettingsContainer-exit-done {
+    display: none;
+    position: absolute;
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 6;
 }
