--- a/src/assets/css/Project.css
+++ b/src/assets/css/Project.css
@@ -47,7 +47,7 @@
     position: absolute; /* Allows it to clip the first portion of the Header Container */
     width: 32px;
     height: 32px;
-    margin-left: 14px;
+    margin-left: var(--back-arrow-margin-left);
 }
 
 .ProjectHeaderBackArrow {
