--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -175,7 +175,7 @@
     align-items: center;
 }
 
-/* Centering */
+/* Transitioning */
 .AppSettingsContainer-enter {
     display: block;
     position: absolute;
@@ -237,7 +237,7 @@
     position: absolute;
     overflow-y: scroll;
     transform: translateX(-100%);
-    transition: transform 250ms ease;
+    transition: transform 200ms ease;
     top: 0px;
     left: 0px;
     margin: 0px;
