Fixed mobile Button Text Vertical Centering.

--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -46,5 +46,6 @@
     height: 100%;
     color: #FFF;
     text-align: center;
+    line-height: 27px; /* Keeps text Vertically Centered on Chrome Mobile */
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
 }
