--- a/src/assets/css/DueDate.css
+++ b/src/assets/css/DueDate.css
@@ -10,12 +10,16 @@
   width: 32px;
   height: 32px; /* Set line-height of .DueDateText equal to this */
   color: #FFF;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--due-date-circle-color);
   flex-grow: 1;
   margin-right: 5px;
 }
 
 .DueDateText {
   display: block;
+  color: var(--due-date-text-color);
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
   font-size: 7pt;
   font-weight: 700;
@@ -28,21 +32,29 @@
 
 
 .Complete {
-  background: #444;
+  background: #222;
   height: 32px;
   width: 32px;
 }
 
 .Overdue {
-  background: #FF0000;
+  background: var(--overdue-color);
+  border-color: var(--overdue-color);
 }
 
 .Soon {
-  background: #FF9300;
+  background: var(--soon-color);
+  border-color: var(--soon-color);
+}
+
+.Later {
+  background: var(--later-color);
+  border-color: var(--later-color);
 }
 
 .Today {
-  background: #00D;
+  background: var(--today-color);
+  border-color: var(--today-color);
 }
 
 .Today .DueDateText {
@@ -50,13 +62,9 @@
   font-stretch: extra-condensed;
 }
 
-.Later {
-  background: #22B30B;
-}
-
 .NotSet {
   background: transparent;
-  border: 1px solid #777;
+  border-color: var(--due-date-circle-color);
   height: 32px;
   width: 32px;
 }
