--- a/src/assets/css/Task.css
+++ b/src/assets/css/Task.css
@@ -9,14 +9,6 @@
   margin-bottom: 0px;
 }
 
-.TaskPriorityIndicator {
-  background:  rgb(255, 150, 0);
-  flex-grow: 0;
-  width: 5px;
-  min-height: 40px;
-  display: flex;
-  flex-direction: column;
-}
 .TaskInactiveStyle {
   background: rgba(0,0,0,0);
   color: #FFF;
@@ -32,12 +24,14 @@
 .TaskBottomBorder {
   margin-left: 30px;
   height: 0px;
-  border-bottom: 1px rgb(50,50,50) solid;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--task-divider-color);
 }
 
 
 .TaskActiveStyle {
-  background: rgba(55,55,55,255);
+  background: var(--task-selected-color);
   color: #FFF;
   width: 100%;
   display: flex;
@@ -52,7 +46,9 @@
 /* Active and Inactive Tasks set to highPriority */
 .TaskActiveStyle[data-ishighpriority*="true"], .TaskInactiveStyle[data-ishighpriority*="true"] {
   box-sizing: border-box;
-  border-left: rgb(255, 150, 0) 6px solid;
+  border-left-width: 6px;
+  border-left-style: solid;
+  border-left-color: var(--important-color);
 }
 
 /* Active and Inactive Tasks set to highPriority whilst also being complete */
