--- a/src/assets/css/TaskText.css
+++ b/src/assets/css/TaskText.css
@@ -10,7 +10,7 @@
 .TaskText {
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
   width: 100%;
-  color: #FFF;
+  color: var(--task-text-color);
   font-Size: 12pt;
   margin-left: 8px;
   margin-right: 8px;
@@ -32,7 +32,7 @@
   vertical-align: middle;
   font-size: 12pt;
   font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-  color: #FFF;
+  color: var(--task-text-color);
   background: var(--surface-color-alternate);
   border: 0px solid #FFF;
   padding-top: 5px;
