--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -1,4 +1,5 @@
 /* Window Layout */
+
 .AppSettingsMenuContainer {
     background: var(--primary-color);
     height: 100%;
@@ -53,6 +54,7 @@
     flex-wrap: nowrap;
     align-items: flex-start;
     align-content: flex-start;
+    padding-left: 10px;
 }
 
 .AppSettingsVerticalFlexItem {
@@ -72,7 +74,7 @@
 }
 
 .AppSettingsItemLabel {
-    color: #FFF;
+    color: var(--primary-active-text-color);
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 10pt;
     line-height: 10pt;
@@ -82,7 +84,7 @@
     margin: 0px;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     background: var(--surface-color-alternate);
-    color: #FFF;
+    color: var(--primary-active-text-color);
     border: gray 1px solid;
     padding: 1px;
 }
@@ -91,7 +93,7 @@
     margin-top: 5px;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     background: var(--surface-color-alternate);
-    color: #FFF;
+    color: var(--alternate-active-text-color);
     border: gray 1px solid;
     padding: 1px;
     width: 180px;
@@ -105,7 +107,7 @@
     vertical-align: middle;
     font-size: 9pt;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-    color: #FFF;
+    color: var(--primary-active-text-color);
     background: var(--surface-color-alternate);
     border: 0px solid #FFF;
     padding: 5px;
@@ -113,7 +115,7 @@
 
 .DatabaseRestoringStatusMessage {
     background: var(--surface-color);
-    color: #FFF;
+    color: var(--primary-active-text-color);
     width: 400px;
     height: 200px;
     overflow-y: scroll;
@@ -121,7 +123,7 @@
 
 .FavouriteProjectSelect {
     background: var(--surface-color-alternate);
-    color: #FFF;
+    color: var(--primary-active-text-color);
     width: 100%;
 }
 
@@ -141,14 +143,14 @@
 .AppSettingsAccountStatus {
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     height: 24px;
-    color: gray;
+    color: var(--alternate-active-text-color);
 }
 
 .AppSettingsAccountEmailDisplay {
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 10pt;
     height: 24px;
-    color: gray;
+    color: var(--alternate-active-text-color);
 }
 
 .AppSettingsAccountEmailContainer {
@@ -160,7 +162,7 @@
 }
 
 .AppSettingsAccountItemLabel {
-    color: #CCC;
+    color: var(--alternate-active-text-color);
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 10pt;
     line-height: 10pt;
@@ -176,6 +178,7 @@
 }
 
 /* Transitioning */
+
 .AppSettingsContainer-enter {
     display: block;
     position: absolute;
@@ -258,4 +261,90 @@
     width: 100vw;
     height: 100vh;
     z-index: 6;
+}
+
+.CSSSelectorsRowGrid {
+    flex-grow: 0;
+    display: grid;
+    grid-template-columns: [label]2fr [value]1.8fr [defaultbutton]1fr;
+    grid-column-gap: 10px;
+    margin-bottom: 10px;
+}
+
+.CSSSelectors-label {
+    grid-column: label;
+    justify-self: start;
+    align-self: center;
+}
+
+.CSSSelectors-value {
+    grid-column: value;
+    justify-self: start;
+    align-self: center;
+}
+
+.CSSSelectors-defaultbutton {
+    grid-column: defaultbutton;
+    justify-self: start;
+    align-self: center;
+}
+
+.ResetColorSettingsLink {
+    color: var(--alternate-inactive-text-color);
+    font-size: 10pt;
+    line-height: 10pt;
+    text-decoration-line: underline;
+    cursor: default;
+}
+
+.ResetColorSettingsLink:hover {
+    color: var(--alternate-active-text-color);
+    cursor: default;
+}
+
+/* Color Picker Transitioning */
+.ColorPickerContainer-enter {
+    position: fixed;
+    bottom: -100vh;
+    left: 0px;
+    width: 100%;
+    z-index: 30;
+}
+
+.ColorPickerContainer-enter-active {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 30;
+    transition: bottom 250ms ease;
+}
+
+.ColorPickerContainer-enter-done {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 30;
+}
+
+.ColorPickerContainer-exit {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 30;
+}
+
+.ColorPickerContainer-exit-active {
+    position: fixed;
+    bottom: -100vh;
+    left: 0px;
+    width: 100%;
+    z-index: 30;
+    transition: bottom 250ms ease;
+}
+
+.ColorPickerContainer-exit-done {
+    display: none;
 }
