--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -49,3 +49,9 @@
     line-height: 27px; /* Keeps text Vertically Centered on Chrome Mobile */
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
 }
+
+.ButtonText[data-size*="small"] {
+    font-size: 8pt;
+    line-height: 18pt;
+    vertical-align: middle;
+}
