--- a/src/assets/css/ListToolbar.css
+++ b/src/assets/css/ListToolbar.css
@@ -21,7 +21,7 @@
 }
 
 .ListToolbarHeader {
-    color: #FFF;
+    color: var(--task-list-header-text-color);
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 14pt;
     overflow: hidden;
@@ -34,14 +34,14 @@
 }
 
 .ListToolbarHeaderInput {
-    color: #FFF;
+    olor: var(--task-list-header-text-color);
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 14pt;
     overflow: hidden;
     text-align: center;
     flex-grow: 4;
     white-space: nowrap;
-    background: rgba(100,100,100,255);
+    background: var(--surface-color-alternate);
     border: 0px solid #FFF;
 }
 
@@ -74,5 +74,5 @@
     align-items: center;
 }
 .ListToolbar[data-isfocused*="true"] {
-    background: rgb(42,42,42);
+    background: var(--task-list-selected-header-color);
 }
