--- a/src/assets/css/Spinner.css
+++ b/src/assets/css/Spinner.css
@@ -12,22 +12,33 @@
 .Spinner[data-size="big"] {
     width: 40px;
     height: 40px;
-    border: 6px solid darkgrey;
-    border-top: 6px solid white;
-}
+    border-width: 6px;
+    border-style: solid;
+    border-color: var(--loading-spinner-primary-color);
+    border-top-width: 6px;
+    border-top-style: solid;
+    border-top-color: var(--loading-spinner-secondary-color);;}
 
 .Spinner[data-size="medium"] {
     width: 20px;
     height: 20px;
-    border: 4px solid darkgrey;
-    border-top: 4px solid white;
+    border-width: 4px;
+    border-style: solid;
+    border-color: var(--loading-spinner-primary-color);
+    border-top-width: 4px;
+    border-top-style: solid;
+    border-top-color: var(--loading-spinner-secondary-color);;
 }
 
 .Spinner[data-size="small"] {
     width: 12px;
     height: 12px;
-    border: 3px solid darkgrey;
-    border-top: 3px solid white;
+    border-width: 3px;
+    border-style: solid;
+    border-color: var(--loading-spinner-primary-color);
+    border-top-width: 3px;
+    border-top-style: solid;
+    border-top-color: var(--loading-spinner-secondary-color);;
 }
 
 
