--- a/src/assets/css/TaskCheckBox.css
+++ b/src/assets/css/TaskCheckBox.css
@@ -9,7 +9,9 @@
   flex-shrink: 1;
   width: 15px;
   height: 15px;
-  border: 1px solid #DDD;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--task-checkbox-color);
   margin-left: 5px;
   animation: isDeChecking 0.25s linear 1;
 }
@@ -23,8 +25,8 @@
   flex-shrink: 1;
   width: 15px;
   height: 15px;
-  border: 1px solid #777;
-  background: rgba(60,60,60,255);
+  border: 1px solid #555;
+  background: rgba(40,40,40,255);
   margin-left: 5px;
   animation: isChecking 0.25s linear 1;
 }
