--- a/src/assets/css/TaskCheckBox.css
+++ b/src/assets/css/TaskCheckBox.css
@@ -7,13 +7,17 @@
 
 .TaskCheckBoxIsNotChecked {
   flex-shrink: 1;
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
   border-width: 1px;
   border-style: solid;
   border-color: var(--task-checkbox-color);
   margin-left: 5px;
   animation: isDeChecking 0.25s linear 1;
+}
+
+.TaskCheckBoxIsNotChecked[data-disableanimations*="true"] {
+  animation: unset;
 }
 
 @keyframes isDeChecking {
@@ -23,12 +27,16 @@
 
 .TaskCheckBoxIsChecked {
   flex-shrink: 1;
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
   border: 1px solid #555;
   background: rgba(40,40,40,255);
   margin-left: 5px;
   animation: isChecking 0.25s linear 1;
+}
+
+.TaskCheckBoxIsChecked[data-disableanimations*="true"] {
+  animation: unset;
 }
 
 @keyframes isChecking {
