--- a/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
+++ b/src/assets/css/AppSettingsMenu/AppSettingsMenu.css
@@ -26,25 +26,6 @@
     height: 100%;
     overflow-y: scroll;
 }
-
-.AppSettingsMenuHeader {
-    background: var(--primary-color);
-    width: 100%;
-    height: 32px;
-}
-
-.AppSettingsBackArrowContainer {
-    width: 48px;
-    height: 48px;
-    margin-left: var(--back-arrow-margin-left);
-}
-
-.AppSettingsBackArrow {
-    height: 60%;
-    width: 60%;
-    opacity: 0.5;
-}
-
 /* Page Content */
 
 .AppSettingsVerticalFlexContainer {
@@ -73,8 +54,36 @@
     margin: 5px 20px 5px 20px;
 }
 
+.AccountSettingsContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.LogInContainer {
+    flex-shrink: 4;
+    width: 100%;
+}
+
+.AccountSettingsActionsContainer {
+    flex-grow: 1;
+    height: fit-content;
+    width: 100%;
+}
+
 .AppSettingsItemLabel {
     color: var(--primary-active-text-color);
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-size: 10pt;
+    line-height: 10pt;
+}
+
+.AppSettingsItemHint {
+    color: var(--alternate-active-text-color);
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 10pt;
     line-height: 10pt;
@@ -146,6 +155,14 @@
     color: var(--alternate-active-text-color);
 }
 
+.AppSettingsAccountDisplayName {
+    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
+    font-size: 10pt;
+    margin-top: 10px;
+    height: 20px;
+    color:var(--alternate-inactive-text-color);
+}
+
 .AppSettingsAccountEmailDisplay {
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-size: 10pt;
@@ -154,6 +171,10 @@
 }
 
 .AppSettingsAccountEmailContainer {
+    margin-top: 25px;
+}
+
+.AppSettingsAccountDisplayNameContainer {
     margin-top: 10px;
 }
 
