--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -4,16 +4,26 @@
     width: 62px;
     margin: 4px;
     padding: 4px;
-    background-image: linear-gradient(to bottom,rgba(68,68,68,0.75),rgba(60,60,60,0.75));
+    background-image: linear-gradient(to bottom,var(--button-background-top-color),var(--button-background-bottom-color));
     cursor: pointer;
     user-select: none;
     border-radius: 2px;
     opacity: 0.75;
 }
 
+.ButtonContainer[data-isenabled*="false"] {
+    opacity: 0.25;
+    pointer-events: none;
+}
 .ButtonContainer[data-size*="small"] {
     height: 27px;
     width: 48px;
+}
+
+.ButtonContainer[data-size*="verysmall"] {
+    height: 22px;
+    width: 32px;
+    padding: 2px;
 }
 
 .ButtonContainer:hover {
@@ -52,6 +62,12 @@
 
 .ButtonText[data-size*="small"] {
     font-size: 8pt;
-    line-height: 18pt;
+    line-height: 14pt;
+    vertical-align: middle;
+}
+
+.ButtonText[data-size*="verysmall"] {
+    font-size: 8pt;
+    line-height: 14pt;
     vertical-align: middle;
 }
