--- a/src/assets/css/Calendar.css
+++ b/src/assets/css/Calendar.css
@@ -1,26 +1,153 @@
-.CalendarPopupContainer {
+/* Transition */
+.CalendarTransition-enter {
     position: absolute;
-    top: 5px;
-    right: 5px;
-    z-index: 2;
-    background: var(--surface-color-alternate);
-    width: 280px;
-    height: auto;
-    margin: 0px;
+    top: 0px;
+    left: 0px;
+    display: block;
+    transform: translateX(100%);
+    z-index: 5;
+}
+
+.CalendarTransition-enter-active {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    transform: translateX(0%);
+    transition: transform 250ms ease;
+    z-index: 5;
+    
+}
+
+.CalendarTransition-enter-done {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+
+}
+
+.CalendarTransition-exit {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: block;
+    transform: translateX(0%);
+    z-index: 5;
+}
+
+.CalendarTransition-exit-active {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    transform: translateX(100%);
+    transition: transform 250ms ease;
+    z-index: 5;
+    
+}
+
+.CalendarTransition-exit-done {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+
+}
+
+
+
+
+.CalendarPopupContainer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background: var(--primary-color);
+    height: 100%;
     padding: 0px;
+    overflow-y: auto;
+}
+
+.CalendarGrid {
+    display: grid;
+    padding: 0px 10px 0px 10px;
+    grid-template-columns: [Main]1fr;
+    grid-template-rows: [Header]max-content [Shortcuts]max-content [DayPicker]max-content [AssignTo]1fr;
+    grid-column-gap: 10px;
+}
+
+.CalendarShorcuts {
+    grid-column: Main;
+    grid-row: Shortcuts;
+    justify-content: center;
+    align-self: flex-start;
+}
+
+.CalendarDayPicker {
+    grid-column: Main;
+    grid-row: DayPicker;
+    justify-content: center;
+    align-self: flex-start;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: gray;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.CalendarAssignTo {
+    grid-column: Main;
+    grid-row: AssignTo;
+    justify-content: center;
+    align-self: flex-start;
+}
+
+.CalendarHeaderContainer {
+    grid-column: Main;
+    grid-row: Header;
     display: flex;
-    flex-direction: column;
+    position: relative;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     align-content: center;
-    border: 1px solid #FFF;
-    user-select: none;
+    width: 100%;
+    height: 40px;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: gray;
+}
+
+.DateLabel {
+    color: white;
+    flex-shrink: 1;
+    width: fit-content;
+}
+
+.PriorityToggleContainer {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: fit-content;
+    width: fit-content;
+    padding: 0px 20px 0px 10px;
 }
 
 .PriorityToggle {
+    flex-shrink: 1;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     color: #FFF;
     font-weight: 500;
-    font-size: 20px;
-    vertical-align: middle;
+    font-size: 28px;
+    cursor: default;
 }
 
 .PriorityToggle[data-ishighpriority*=true] {
@@ -28,95 +155,134 @@
     font-weight: 600;
 }
 
-.PriorityToggleContainer {
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
+.CalendarShortcutsGrid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: [Left]1fr [Right]1fr;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: gray;
+    padding-bottom: 5px;
 }
 
-.PriorityToggleContainer:hover {
+
+.ShortcutItemContainer {
+    flex: 1;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    flex-wrap: nowrap;
+    cursor: default;
+    padding: 0px 5px 0px 10px;
+}
+
+.ShortcutItemContainer[data-grid-col*="left"] {
+    grid-column: Left;
+}
+
+.ShortcutItemContainer[data-grid-col*="right"] {
+    grid-column: Right;
+}
+
+.CalendarShortcutHorizontalSpace {
+    flex-shrink: 1;
+    width: 20px;
+}
+
+.ShortcutItemContainer:hover {
     background: rgba(52,52,52,255);
 }
 
-/* Keep the same as .CalenderPopupContainer .ShortcutItemContainerIsSelected */
-.CalendarPopupContainer .ShortcutItemContainer, #DateLabelContainer { 
-    display: table;
-    width: 100%;
-    min-height: 30px;
-    flex-grow: 1;
-    padding: 0px 0px;
-}
 
-#DateLabel {
-    display: table-cell;
-    vertical-align: middle;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    font-size: 12pt;
-    color: #BBB;
-    padding: 5px 10px;
-    text-align: center;
-}
-
-
-/* Keep the same as .CalenderPopupCOntainer .ShortcutItemContainer */
-.CalendarPopupContainer .ShortcutItemContainerIsSelected {
-    display: table;
-    width: 100%;
-    min-height: 30px;
-    flex-grow: 1;
-    padding: 0px 0px;
-    background: rgba(63,63,76,255);
-}
-
-.CalendarPopupContainer .ShortcutItemContainer .ItemLabel {
-    display: table-cell;
-    vertical-align: middle;
+.CalendarShortcutItemLabel {
+    flex: 1;
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-weight: 400;
     font-size: 12pt;
     color: #FFF;
-    padding: 5px 10px;
+    padding: 5px 0px 5px 0px;
     text-align: left;
 }
 
-
-.CalenderPopupContainer .ShortcutItemContainer .SideBySide {
-    float: left;
-}
-
-
-#CalendarPopupDaysInput {
-    background: transparent;
+.CalendarShortcutDaysInput {
+    flex: 1;
+    max-width: 50px;
+    font-family: 'Segoe UI', Lucinda Sans, Geneva, Verdana, sans-serif;
     color: #FFF;
-    border: 1px solid #FFF;
-    width: 40px;
-    float: left;
-    margin: 10px 5px;
+    background: var(--surface-color-alternate);
+    text-align: center;
+    border: 1px solid gray;
 }
 
-#DaysLabel {
-    float: left;
-    margin: 4px 5px;
+.CalendarShortcutApplyButtonContainer {
+    flex: 1;
 }
 
-#DaysApplyButton {
-    float: right;
-    margin: 10px 10px;
-    background: transparent;
-    padding: 2px;
-    color: #FFF;
-    font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
-    border: 1px solid #FFF;
-}
-
-.CalendarFullBleedDivider {
-    height: 0px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+.CalendarAssignToContainer {
     width: 100%;
-    border-bottom: 1px rgb(65,65,65) solid;
+
 }
 
+.CalendarAssignToHeaderContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.CalendarMembersContainer {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.CalendarMember {
+    flex-shrink: 1;
+    height: 25px;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 3px 9px 3px 9px;
+    margin: 10px;
+    background: var(--surface-color-alternate);
+    border: 1px solid gray;
+    border-radius: 25%;
+}
+
+.CalendarMemberName {
+    flex-shrink: 1;
+    color: var(--primary-inactive-text-color);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 11pt;
+    font-weight: 500;
+    vertical-align: middle;
+    text-align: center;
+    user-select: none;
+    cursor: default;
+}
+
+.CalendarMemberName[data-isselected*="true"] {
+    color: var(--primary-active-text-color);
+}
+
+.CalendarAssignToHeader {
+    flex-shrink: 1;
+    color: var(--alternate-active-text-color);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 10pt;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
