--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -1,20 +1,22 @@
-.TaskListSettingsMenuPopup {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 200px;
+
+.TaskListSettingsMenuContainer {
+    display: flex;
+    width: 180px;
     height: fit-content;
-    z-index: 2;
+    flex-direction: column;
+    flex-basis: auto;
+    align-items: flex-start;
     background: var(--surface-color-alternate);
     border: 1px solid white;
-    
+    color: var(--primary-active-text-color);
     box-shadow: 5px 5px 10px 0px #111;
 }
+
 
 .ShowCompletedTasksSelection {
     display: table;
     width: fit-content;
-    padding-left: 0px;
+    padding-left: 4px;
     padding-bottom: 8px;
     padding-top: 8px;
     border-bottom: 1px rgb(80, 80, 80) solid;
@@ -23,9 +25,9 @@
 .ShowCompletedTasksCheckBox {
     display: table-cell;
     vertical-align: middle;
-    margin-left: 8px;
-    height: 16px;
-    width: 16px;
+    margin-left: 5px;
+    height: 12px;
+    width: 12px;
 }
 
 .ShowCompletedTasksLabel {
@@ -33,19 +35,11 @@
     font-family: 'Segoe UI', Lucinda Grande, Geneva, Verdana, sans-serif;
     font-weight: 400;
     font-size: 10pt;
-    padding-left: 10px;
+    padding-left: 15px;
     display: table-cell;
     vertical-align: middle;
 }
 
-.TaskListSettingsMenuContainer {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    flex-basis: auto;
-    align-items: flex-start;
-}
 
 .TaskListSettingsMenuItemContainer {
     flex-grow: 1;
@@ -59,6 +53,10 @@
     flex-direction: row;
     justify-content: left;
     align-items: center;
+}
+
+.TaskListSettingsMenuItemContainer:hover {
+    background: rgba(52, 52, 52, 255);
 }
 
 .TaskListSettingsMenuItemLabel {
