--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -111,12 +111,15 @@ exit, exit-active, exit-done.  */
   transform: translatex(-100%);
   z-index: 3;
   height: 100vh;
+  background: var(--background-color);
   width: 100%;
 }
 
 .SidebarContainer-enter-active {
   position: absolute;
   transform: translatex(0%);
+  width: 100%;
+  background: var(--background-color);
   z-index: 3;
   transition: transform 250ms ease-out;
 }
@@ -124,6 +127,7 @@ exit, exit-active, exit-done.  */
 .SidebarContainer-enter-done {
   position: absolute;
   transform: translatex(0%);
+  background: var(--background-color);
   z-index: 3;
   height: 100vh;
   width: 100vw;
@@ -133,6 +137,7 @@ exit, exit-active, exit-done.  */
 .SidebarContainer-exit {
   position: absolute;
   transform: translatex(0%);
+  background: var(--background-color);
   z-index: 3;
   height: 100vh;
   width: 100vw;
@@ -140,6 +145,8 @@ exit, exit-active, exit-done.  */
 
 .SidebarContainer-exit-active {
   position: absolute;
+  background: var(--background-color);
+  width: 100%;
   transform: translatex(-100%);
   transition: transform 200ms ease-in;
   z-index: 3;
@@ -147,5 +154,7 @@ exit, exit-active, exit-done.  */
 
 .SidebarContainer-exit-done {
   position: absolute;
+  background: var(--background-color);
+  width: 100%;
   transform: translatex(-100%);
 }
