--- a/src/assets/css/Task.css
+++ b/src/assets/css/Task.css
@@ -1,7 +1,8 @@
 .TaskContainer {
   height: auto;
   position: relative; 
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: hidden;
   min-height: 40px;
   max-height: 240px; /* Same as .TaskClickContainer max-height */
   display: flex;
@@ -19,9 +20,9 @@
   flex-direction: column;
 }
 
-.TaskContainer[data-isselected*="true"] {
+/* .TaskContainer[data-isselected*="true"] {
   background: var(--task-selected-color);
-}
+} */
 
 .TaskContainer[data-ismoving*="true"] {
   background: rgba(63,63,180,255);
@@ -50,7 +51,8 @@
 .TaskContainer-enter-done {
   height: auto;
   position: relative; 
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: hidden;
   min-height: 40px;
   max-height: 240px; /* Same as .TaskClickContainer max-height */
   display: flex;
@@ -168,6 +170,58 @@
 }
 
 
+
+
+.OptionsTransitionItem-enter {
+  position: absolute;
+  left: -100%;
+  opacity: 0.01;
+  width: 100%;
+  z-index: 5;
+}
+
+
+.OptionsTransitionItem-enter-active {
+  position: absolute;
+  left: 0px;
+  opacity: 1;
+  width: 100%;
+  transition: left 150ms ease-out, opacity 100ms ease-out;
+  z-index: 5;
+}
+
+.OptionsTransitionItem-enter-done {
+  position: static;
+  width: 100%;
+}
+
+
+.OptionsTransitionItem-exit {
+  position: absolute;
+  top: 0px;
+  left: 0%;
+  opacity: 1;
+  width: 100%;
+  z-index: 5;
+}
+
+.OptionsTransitionItem-exit-active {
+  position: absolute;
+  top: 0px;
+  left: -100%;
+  opacity: 0.01;
+  width: 100%;
+  z-index: 5;
+  transition: left 150ms ease-out, opacity 100ms ease-out;
+}
+
+.OptionsTransitionItem-exit-done {
+  display: none;
+  z-index: 5;
+}
+
+
+
 .Task {
   color: #FFF;
   width: 100%;
@@ -209,7 +263,8 @@
 .TaskBottomBorder {
   width: 100%;
   margin-left: 27px;
-  margin-bottom: -1px;
+  margin-bottom: 0px;
+  box-sizing: content-box;
   height: 0px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -227,5 +282,70 @@
   max-height: 240px;  /* Same as .TaskContainer max-height */
   overflow: hidden;
 }
+
+.TaskOptionsOverlay {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  background: var(--surface-color);
+}
+
+.TaskOptionsDeleteButton {
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 25%;
+  height: 85%;
+  background: #be1609;
+}
+
+.TaskOptionsDeleteButtonText {
+  flex-shrink: 1;
+  color: #FFF;
+}
+
+.TaskOptionsMoveButton {
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 25%;
+  height: 85%;
+  background: rgba(63,63,180,255);
+  color: #FFF;
+}
+
+.TaskOptionsMoveButtonText {
+  flex-shrink: 1;
+  color: #FFF;
+}
+
+.TaskOptionsCancelButton {
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 25%;
+  height: 85%;
+  background: #c56e03;
+}
+
+.TaskOptionsCancelButtonText {
+  flex-shrink: 1;
+  color: #FFF;
+}
+
+
 
 
