--- a/src/assets/css/TaskListSettingsMenu.css
+++ b/src/assets/css/TaskListSettingsMenu.css
@@ -1,7 +1,10 @@
 
 .TaskListSettingsMenuContainer {
+    position: fixed;
+    right: 10%;
+    left: 10%;
+    top: 25%;
     display: flex;
-    width: 180px;
     height: fit-content;
     flex-direction: column;
     flex-basis: auto;
